# mlops-101

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  project-config.yaml  pyproject.toml
.github/workflows/: build_and_deploy_api.yaml  build_and_push_api.yaml  ci.yaml  deploy_to_gcp.yaml  generate_evidently_report.yaml  load_data.yaml  train_model.yaml
scripts/: 1_load_data.py  1_load_monthly_data.py  2_process_data.py  3_train_model.py
src/: project_config.py  utils.py
src/make_api/: Dockerfile  requirements.txt  resources.yaml
src/make_api/app/: main.py
src/make_data/: data_loader.py  data_processor.py  gcs_connector.py
src/make_infra/: main.tf  variables.tf
src/make_model/: model_trainer.py
src/make_monitoring/: create_dashboard.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_data_processor.py  test_gcs_connector.py  test_model_trainer.py  test_project_config.py  test_utils.py
